src/components/Panels/TrackHeadersPanel.module.css
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 280px;
    background-color: var(--bg-secondary);
    border-right: 1px solid var(--stroke-secondary);
    color: var(--text-primary);
}

.header {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 48px;
    padding-left: 8px;
    padding-right: 12px;
}

.track_headers_list{
    display: flex;
    flex-direction: column;
    gap: 2px;
    width: 100%;
    padding: 0px 0px 0px 12px;
}

